# cc_abstemious

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  cc_abstemious.cdx.json  cc_abstemious.cdx.xml  output.csv
.github/workflows/: on-main-push.yml  on-mr.yml
docs/: Notes.md  development.md  index.html  input_1.json  theory.md
docs/verification/rigid_sphere_plane_wave/: rigid_sphere_plane_wave.md  rigid_sphere_plane_wave.py
src/: analysis.rs  elements.rs  incident_wave.rs  influence_matrix.rs  input_data.rs  lib.rs  main.rs  model_data.rs  postprocess.rs  preprocess.rs  solve.rs  tools.rs
src/model_data/: text_reader.rs
src/preprocess/: input.rs  input_data.rs  mesh.rs  mesh_data.rs
src/solve/: aca.rs  gmres.rs  h_matrix.rs
src/solve/h_matrix/: aca.rs  block.rs  cluster.rs
src/solve/h_matrix/block/: cluster.rs
src/tests/: input_1.json  preprocess.rs  refined_sphere.vtk  rigid_sphere_plane_wave_bem.csv  sphere.vtk  sphere_quad.vtk  sphere_refined_2.vtk  test1.rs  verification.rs
verification/: output.csv  rigid_sphere_plane_wave.py
