[package]
name = "cc_abstemious"
version = "0.0.0"
edition = "2021"

[lib]
name = "cc_abstemious"
path = "src/lib.rs"

[[bin]]
name = "cc_abstemious"
path = "src/main.rs"

[[test]]
name = "cc_abstemious_verification"
path = "src/tests/verification.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
csv = "1.3.0"
log = "0.4.22"
nalgebra = "0.33.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
simplelog = "0.12.2"
threadpool = "1.8.1"
