[package]
name = "cc_abstemious"
version = "1.2.1"
edition = "2024"

[lib]
name = "cc_abstemious"
path = "src/lib.rs"

[profile.release]
debug = true

[[bin]]
name = "cc_abstemious"
path = "src/main.rs"

[[test]]
name = "cc_abstemious_verification"
path = "src/tests/verification.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
csv = "1.3.1"
log = "0.4.27"
nalgebra = "0.33.2"
rand = "0.9.0"
schemars = "0.8.22"
scoped_threadpool = "0.1.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
